--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 
   <!-- add to homescreen for ios -->
