--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script src="http://www.sdk.twilio.com/js/video/releases/2.17.1/twilio-video.min.js"></script>
 
 </head>
 
