--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8"/>
     <title>Ionic App</title>
-
+<link rel="stylesheet" href="assets/safe-area.css">
     <base href="/"/>
 
     <meta name="viewport"
           content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="msapplication-tap-highlight" content="no"/>
+    <meta name="viewport" content="initial-scale=1,user-scalable=no, width=device-width, height=device-height, viewport-fit=cover">
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"
