--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Ionic App</title>
-<link rel="stylesheet" href="assets/safe-area.css">
+<!--<link rel="stylesheet" href="assets/safe-area.css">-->
     <base href="/"/>
 
     <meta name="viewport"
